CHANGE: Status now shows when it is re-checking pieces on download completion [Nolar]
CHANGE: URL dialogs are initialized with the first valid link beginning with http:// from clipboard [Rele]
CHANGE: Under linux, only use ~/.azureus dir if it already exists, otherwise use normal program dir for files [Nolar] 
CHANGE: Auto-update: now writes a log to an 'update.log' file [Nolar]

BUGFIX: 'Re-check pieces when done' now always ignores fast-resume data: Bug #825881 [Nolar]
BUGFIX: Fix some decoding bugs in Chinese torrent files due to missing locale encodings in dialog box [Akilgard]






20.11.03 | Azureus 2.0.4.2

FEATURE: Added tooltip general support [Gudy]
FEATURE: Default torrent encoding selection added to Config->File [Parg]
FEATURE: Public tracker support - config item allows external use of tracker [Parg]

CHANGE: Full scrape of embedded tracker now supported as SN requires this for hosting [Parg]
CHANGE: Better peer client identification [Nolar]
CHANGE: Added AZ version + torrent size to stats [Parg]
CHANGE: Added 'comment' field to torrent create [Parg]
CHANGE: Moving of .torrent to completed dir now optional [Nolar]
CHANGE: Additional upload speed options [Nolar]
CHANGE: Cleanup of Configuration tabs [Nolar]
CHANGE: Rewrite of locale selection code for torrents. Only one encoding allowed per torrent [Parg]
CHANGE: File->Open... now opens to the default download/torrent dirs set in config [Parg]
CHANGE: ETA/TimeRemaining now uses just two significant measures, and "kB" changed to "KB"  [Nolar] 

BUGFIX: Torrent hosting - resetting of tracker url to original after hosting cancelled [Parg]
BUGFIX: Allow for torrent files with '.tor' extention [Nolar]
BUGFIX: Renamed file not reused after torrent Stop-Start: Bug #842750 [Nolar]
BUGFIX: No longer deletes files if the 'completed' dir points to the download dir: Bug #842896 [Nolar]
BUGFIX: Fast resume data no longer duplicated [Nolar]
BUGFIX: File 'downloads.config' kept better up-to-date [Nolar]